--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&family=Ubuntu:wght@400;500;700&family=Roboto+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&family=Ubuntu:wght@400;500;700&family=Roboto+Mono&display=swap');
 
 * {
     margin: 0;
@@ -7,9 +7,11 @@
     text-decoration: none;
 }
 html, body {
-    margin: 0; height: 100%; overflow: hidden
+    margin: 0; height: 100%;
 }
-
+.body{
+    padding-top:10px;
+}
 /*nav bar*/
 .max-width {
     max-width: 1300px;
@@ -17,7 +19,6 @@ html, body {
     margin: auto;
 }
 .navbar {
-    position: fixed;
     width: 100%;
     padding: 15px 0;
     background: #f0932b;
@@ -61,6 +62,21 @@ html, body {
     font-size: 20px;
     cursor: pointer;
     display: none;
+}
+
+/* Content */
+.body {
+    margin: 5px 60px auto 60px;
+}
+
+.body h1 {
+    font-family: 'Poppins';
+    font-weight: 500;
+}
+
+.pdf_frame {
+    width: 100%; height: 80vh; overflow: hidden;
+    margin-top: 9px;
 }
 
 /* Responsive media */
