--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -66,7 +66,7 @@ html, body {
 
 /* Content */
 .body {
-    margin: 5px 60px auto 60px;
+    margin: 4px 60px auto 60px;
 }
 
 .body h1 {
@@ -109,5 +109,12 @@ html, body {
         display: inline-block;
         margin: 20px 0;
         font-size: 25px;
+    }
+
+    .navbar .max-width {
+        margin: 0px -60px;
+    }
+    .body {
+        margin: 0px 10px;
     }
 }
