--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&family=Ubuntu:wght@400;500;700&family=Roboto+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap');
 
 * {
     margin: 0;
@@ -47,9 +48,10 @@ html, body {
     display: inline-block;
 }
 .navbar .menu li a {
+    font-family: 'Lato';
     color: white;
     font-size: 18px;
-    font-weight: 500;
+    font-weight: 700;
     margin-left: 25px;
     transition: color 0.3s ease;
 }
