--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&family=Ubuntu:wght@400;500;700&family=Roboto+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&family=Ubuntu:wght@300;500;700&family=Roboto+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap');
 
 * {
     margin: 0;
@@ -45,9 +46,10 @@ html, body {
     display: inline-block;
 }
 .navbar .menu li a {
+    font-family: 'Lato';
     color: white;
     font-size: 18px;
-    font-weight: 500;
+    font-weight: 700;
     margin-left: 25px;
     transition: color 0.3s ease;
 }
@@ -69,7 +71,8 @@ html, body {
     height: 100vh;
     color: white;
     min-height: 500px;
-    font-family: 'Ubuntu', 'sans-serif';
+    font-family: 'Lato';
+    font-weight: 300;
 }
 .home .max-width {
     margin: auto 0 auto 40px;
