--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&family=Ubuntu:wght@400;500;700&family=Roboto+Mono&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400&display=swap');
 
 * {
     margin: 0;
@@ -10,9 +9,11 @@
 html, body {
     overflow-x:hidden;
     margin: 0; height: 100%;
+    background-color:black;
 }
 .body{
     padding-top:10px;
+    
 }
 /*nav bar*/
 .max-width {
@@ -23,8 +24,8 @@ html, body {
 .navbar {
     width: 100%;
     padding: 15px 0;
-    background: #0abde3;
-    font-family: 'Ubuntu', 'sans-serif';
+    font-family: 'Roboto Mono';
+    font-weight: 500;
 }
 .navbar .max-width {
     display: flex;
@@ -33,7 +34,7 @@ html, body {
 }
 .navbar .logo a {
     font-size: 35px;
-    font-weight: 600;
+    font-weight: 400;
     color: white;
 }
 .navbar .logo a span {
@@ -48,10 +49,10 @@ html, body {
     display: inline-block;
 }
 .navbar .menu li a {
-    font-family: 'Lato';
+    font-family: 'Roboto Mono';
     color: white;
     font-size: 18px;
-    font-weight: 700;
+    font-weight: 300;
     margin-left: 25px;
     transition: color 0.3s ease;
 }
@@ -73,7 +74,8 @@ html, body {
 }
 
 .body h1 {
-    font-family: 'Poppins';
+    color:white;
+    font-family: 'Roboto Mono';
     font-weight: 500;
 }
 
