--- a/styles/styles.css
+++ b/styles/styles.css
@@ -132,7 +132,6 @@ html, body {
     outline-offset: -4px;
 }
 .contact:hover {
-    font-size: black;
     background-color: #0abde3;
     outline: 2px solid #fff;
     outline-offset: -4px;
@@ -193,5 +192,7 @@ html, body {
 
     .contact {
         font-size: 20px;
+        background-color: white;
+        color: black;
     }
 }
