--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -28,3 +28,7 @@ html, body {
     99% {background-color: transparent;}
     100% { background-color: white}
 }
+
+.check_more {
+    margin-top: 40px;
+}
