--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -39,7 +39,7 @@
     transition: color 0.3s ease;
 }
 .navbar .menu li a:hover {
-    text-decoration: underline;
+    color: #0abde3;
 }
 .logo ul {
     list-style: none;
